# PEA

./: .gitignore  EIS_plots.sty  README.md  cover.fls  cover.tex  references.bib
code/drt_correct/: Final.ipynb  main.py  pyproject.toml
code/eis-plotter/: automatic_script.py  pyproject.toml  savgol2_plotter.ipynb  savgol_plotter.ipynb  spline_plotter.ipynb
code/eis_plotter/: Untitled.ipynb  savgol2_plotter.ipynb  savgol_plotter.ipynb
code/parameter_guesser/: L_circuit.ipynb  main.py  parameter_estimator_final.ipynb  parameter_estimator_final_v0.ipynb  parameter_estimator_final_v1.ipynb  pyproject.toml
code/parameter_plotter/: Plotter_params.ipynb  main.py  pyproject.toml
final_report/: cover.fdb_latexmk  cover.fls  cover.tex  references.bib
intermediary_report/: cover.fdb_latexmk
intermediary_report/plots/: Bode120h.eps  Bode168h.eps  Bode1h.eps  Bode24h.eps  Bode48h.eps  Bode8h.eps  Bode_0h.eps  Bode_48h.eps  Bode_4h.eps  Bode_72h.eps  Bode_8h.eps  Impedance2.eps  Nyquist0h.eps  Nyquist120h.eps  Nyquist72h.eps  Nyquist8h.eps  Nyquist_0h_2.eps  Nyquist_120h_2.eps  Nyquist_168h_2.eps  Nyquist_168h_3.eps  Nyquist_1h_2.eps  Nyquist_1h_3.eps  Nyquist_24h_2.eps  Nyquist_24h_3.eps  Nyquist_48h_2.eps  Nyquist_4h_2.eps  Nyquist_72h_2.eps  (+1 more)
plots/: Bode0h.eps  Bode4h.eps  Bode72h.eps  Bode_120h.eps  Bode_168h.eps  Bode_1h.eps  Bode_24h.eps  Impedance.eps  Impedance3.eps  Nyquist168h.eps  Nyquist1h.eps  Nyquist24h.eps  Nyquist48h.eps  Nyquist4h.eps  Nyquist_0h_3.eps  Nyquist_120h_3.eps  Nyquist_48h_3.eps  Nyquist_4h_3.eps  Nyquist_72h_3.eps  Nyquist_8h_3.eps  OCP.eps
(+35 files in other folders)
