[project]
name = "drt-correct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "cvxopt~=1.3",
    "gamry-parser>=0.4.6",
    "ipykernel>=6.31.0",
    "matplotlib==3.7.3",
    "numpy==1.24.1",
    "pandas==1.5.3",
    "pydrttools",
    "pyqt5==5.15.9",
    "pyqt5-qt5==5.15.2",
    "requests==2.28",
    "scikit-learn>=1.6.1",
    "scipy==1.10.0",
]

[tool.uv.sources]
pydrttools = { git = "https://github.com/ciuccislab/pyDRTtools" }
